[package]
name = "android-audio-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rodio = "0.18.1"
web-audio-api = "0.45"
# batbox-android = "*"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
jni = "0.21.1"
ndk = "0.9"
ndk-sys = "0.6.0"
ndk-context = "0.1.1"
oboe = { version = "0.6", features = ["java-interface", "shared-stdcxx"] }
android_logger = "0.11.0"
log = "0.4"

[package.metadata.android]
assets = "assets"
sdk.target_sdk_version = 33

[patch.crates-io]
batbox-android = { git = "https://github.com/geng-engine/batbox" }
